<resources>
    <string name="app_name">studentViolation</string>
    <string name="title_activity_creat_account">CreatAccount</string>
    <string name="title_activity_security_person">SecurityPerson</string>
    <string-array name="voilation_location">
        <item>Class Room</item>
        <item>Floor</item>
        <item>Building</item>
        <item>Hostel</item>
        <item>Others</item>
    </string-array>
    <string-array name="voilation_Type">
        <item>Dress Code</item>
        <item>Littering</item>
        <item>Parking Violation</item>
        <item>Others</item>
    </string-array>
    <string-array name="user_Type">
        <item>Student</item>
        <item>Security</item>
        <item>Others</item>
    </string-array>


    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="violation_submit">Submit Violation</string>
    <string name="view_profile">View/Edit Profile</string>
    <string name="view_violationList">View Violation List</string>


    <string name="quotedesc">Find Student Violation current Loation</string>
</resources>

