<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp"
    tools:context="com.example.lingarajsajjan.studentviolation.DashboardOptions">

    <android.support.v7.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/welcomeTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"

            android:textColor="@android:color/holo_red_light"
            android:textSize="16dp" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/submitViolation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorTextHint"
            android:text="@string/violation_submit" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/view_violation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorTextHint"
            android:text="@string/view_violationList" />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/viewProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorTextHint"
            android:text="@string/view_profile" />
</android.support.v7.widget.LinearLayoutCompat>
        </android.support.v4.widget.NestedScrollView>

